# arthema

./: .gitignore  Cargo.toml  DEVFLOW.md  README.md  ROADMAP.md
.clicaude/: history.json
.clicaude/collections/: Req_1.json  Req_2.json  Req_3.json  Req_4.json  Req_5.json  Request_1.json
src/: ai.rs  app.rs  bruno.rs  collections.rs  config.rs  curl.rs  img_preview.rs  main.rs  openapi.rs  postman.rs  ui.rs
