[package]
name = "arthema"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
dotenv = "0.15"
directories = "5.0"
arboard = "3.4"
tui-textarea = "0.4"
chrono = "0.4"
sysinfo = "0.30"
