[package]
name = "arthema"
version = "0.1.6"
edition = "2024"
description = "A fast, lightweight, and futuristic Cyberpunk-themed API IDE"
license = "MIT"
repository = "https://github.com/danjavia/arthema"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
dotenv = "0.15"
directories = "5.0"
arboard = "3.4"
tui-textarea = "0.4"
chrono = "0.4"
sysinfo = "0.30"
shlex = "1.3"
image = "0.24"
base64 = "0.22"
openapiv3 = "2.0"
serde_yaml = "0.9"
